Fix space on mobile css declaration

--- a/src/assets/scss/components/_global-settings.scss
+++ b/src/assets/scss/components/_global-settings.scss
@@ -11,8 +11,8 @@
 @mixin common-vars {
     --c-white: #ffffff;
     --c-black: #000000;
-    --logo-header-height: 40px;
-    --logo-footer-height: 32px;
+    --logo-header-height: 80px;
+    --logo-footer-height: 64px;
     --c-primary-light: #CCE4FF;
     --c-primary-main: #0057FF;
     --c-primary-dark: #012293;
